examples/invalid/syntax.juni
fn main :: x => 1 + + 1


  #print match "abc" {
  #  "xyz" => "nope",
  #  "abc" => "yep",
  #}
